--- a/application.css
+++ b/application.css
@@ -37,17 +37,43 @@
   clear: both;
 }
 
-.notOver {
-  position: absolute;
+.not-over {
+  position: fixed;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
   background-color: #000;
-  opacity: 0.3;
+  opacity: 0.5;
   display: none;
 }
 
 .over {
-  display: inline;
+  display: block;
+}
+
+.over-message {
+  left: 30%;
+  top: 40%;
+  position: absolute;
+  background-color: #eee;
+  width: 400px;
+  height: 100px;
+  border-radius: 10px;
+  opacity: 1;
+  text-align: center;
+}
+
+.over-message span {
+  position: relative;
+  top: 20%;
+}
+
+.over-message button {
+  position: relative;
+  top: 40%
+}
+
+.hidden {
+  display: none;
 }
